--- a/config.json
+++ b/config.json
@@ -483,21 +483,21 @@
             "tag": "♻️ 自动选择",
             "type": "urltest",
             "outbounds": [
-                "🇺🇲 ·美国·TG@kkouokk·14",
-                "🇺🇲 ·美国·TG@kkouokk·15",
+                "🇺🇸 ·美国·TG@kkouokk·14",
+                "🇺🇸 ·美国·TG@kkouokk·15",
                 "🇮🇷 ·伊朗·TG@kkouokk·16",
-                "🇺🇲 ·美国·TG@kkouokk·17",
-                "🇺🇲 ·美国·TG@kkouokk·18",
-                "🇺🇲 ·美国·TG@kkouokk·19",
-                "🇺🇲 ·美国·TG@kkouokk·20",
+                "🇺🇸 ·美国·TG@kkouokk·17",
+                "🇺🇸 ·美国·TG@kkouokk·18",
+                "🇺🇸 ·美国·TG@kkouokk·19",
+                "🇺🇸 ·美国·TG@kkouokk·20",
                 "🇫🇷 ·法国·TG@kkouokk·21",
-                "🇺🇲 ·美国·TG@kkouokk·22",
-                "🇺🇲 ·美国·TG@kkouokk·23",
-                "🇺🇲 ·美国·TG@kkouokk·24",
+                "🇺🇸 ·美国·TG@kkouokk·22",
+                "🇺🇸 ·美国·TG@kkouokk·23",
+                "🇺🇸 ·美国·TG@kkouokk·24",
                 "🇮🇷 ·伊朗·TG@kkouokk·25",
-                "🇺🇲 ·美国·TG@kkouokk·26",
-                "🇺🇲 ·美国·TG@kkouokk·27",
-                "🇺🇲 ·美国·TG@kkouokk·28",
+                "🇺🇸 ·美国·TG@kkouokk·26",
+                "🇺🇸 ·美国·TG@kkouokk·27",
+                "🇺🇸 ·美国·TG@kkouokk·28",
                 "🇨🇳 ·中国·TG@kkouokk·151"
             ],
             "url": "http://www.gstatic.com/generate_204",
@@ -509,21 +509,21 @@
             "type": "selector",
             "outbounds": [
                 "♻️ 自动选择",
-                "🇺🇲 ·美国·TG@kkouokk·14",
-                "🇺🇲 ·美国·TG@kkouokk·15",
+                "🇺🇸 ·美国·TG@kkouokk·14",
+                "🇺🇸 ·美国·TG@kkouokk·15",
                 "🇮🇷 ·伊朗·TG@kkouokk·16",
-                "🇺🇲 ·美国·TG@kkouokk·17",
-                "🇺🇲 ·美国·TG@kkouokk·18",
-                "🇺🇲 ·美国·TG@kkouokk·19",
-                "🇺🇲 ·美国·TG@kkouokk·20",
+                "🇺🇸 ·美国·TG@kkouokk·17",
+                "🇺🇸 ·美国·TG@kkouokk·18",
+                "🇺🇸 ·美国·TG@kkouokk·19",
+                "🇺🇸 ·美国·TG@kkouokk·20",
                 "🇫🇷 ·法国·TG@kkouokk·21",
-                "🇺🇲 ·美国·TG@kkouokk·22",
-                "🇺🇲 ·美国·TG@kkouokk·23",
-                "🇺🇲 ·美国·TG@kkouokk·24",
+                "🇺🇸 ·美国·TG@kkouokk·22",
+                "🇺🇸 ·美国·TG@kkouokk·23",
+                "🇺🇸 ·美国·TG@kkouokk·24",
                 "🇮🇷 ·伊朗·TG@kkouokk·25",
-                "🇺🇲 ·美国·TG@kkouokk·26",
-                "🇺🇲 ·美国·TG@kkouokk·27",
-                "🇺🇲 ·美国·TG@kkouokk·28",
+                "🇺🇸 ·美国·TG@kkouokk·26",
+                "🇺🇸 ·美国·TG@kkouokk·27",
+                "🇺🇸 ·美国·TG@kkouokk·28",
                 "🇨🇳 ·中国·TG@kkouokk·151",
                 "🎯 Direct"
             ]
