update sing-box public config file

--- a/config.json
+++ b/config.json
@@ -981,6 +981,10 @@
       ]
     },
     {
+      "tag": "🎯 Direct",
+      "type": "direct"
+    },
+    {
       "tag": "🈲 Block",
       "type": "block"
     },
