--- a/config-1.12.json
+++ b/config-1.12.json
@@ -9,14 +9,14 @@
         "tag": "dns_remote",
         "type": "udp",
         "server": "8.8.8.8",
-        "domain_strategy": "prefer_ipv4",
+        "strategy": "prefer_ipv4",
         "detour": "🚀 Proxy"
       },
       {
         "tag": "dns_direct",
         "type": "udp",
         "server": "223.5.5.5",
-        "domain_strategy": "prefer_ipv4"
+        "strategy": "prefer_ipv4"
       },
       {
         "type": "local"
@@ -188,22 +188,6 @@
         "outbound": "🎯 Direct"
       },
       {
-        "ip_cidr": [
-          "91.108.56.0/22",
-          "91.108.4.0/22",
-          "91.108.8.0/22",
-          "91.108.16.0/22",
-          "91.108.12.0/22",
-          "149.154.160.0/20",
-          "91.105.192.0/23",
-          "91.108.20.0/22",
-          "185.76.151.0/24",
-          "2001:b28:f23d::/48",
-          "2001:b28:f23f::/48",
-          "2001:67c:4e8::/48",
-          "2001:b28:f23c::/48",
-          "2a0a:f280::/32"
-        ],
         "rule_set": [
           "geosite-telegram",
           "geosite-geolocation-!cn"
@@ -225,12 +209,12 @@
     {
       "tag": "tun-in",
       "type": "tun",
-      "interface_name": "tun0",
+      "interface_name": "utun1",
       "address": [
         "172.19.0.1/30",
         "fdfe:dcba:9876::1/126"
       ],
-      "mtu": 1492,
+      "mtu": 9000,
       "auto_route": true,
       "strict_route": true,
       "stack": "system",
