--- a/config-1.11.json
+++ b/config-1.11.json
@@ -15,6 +15,10 @@
         "tag": "dns_direct",
         "address": "223.5.5.5",
         "strategy": "prefer_ipv4"
+      },
+      {
+        "tag": "local",
+        "address": "local"
       }
     ],
     "rules": [
@@ -25,6 +29,10 @@
       {
         "clash_mode": "Global",
         "server": "dns_remote"
+      },
+      {
+        "outbound": "any",
+        "server": "local"
       },
       {
         "rule_set": [
@@ -75,36 +83,36 @@
         "tag": "geosite-geolocation-cn",
         "type": "remote",
         "format": "binary",
-        "url": "https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-geolocation-cn.srs",
-        "download_detour": "🚀 Proxy"
+        "url": "https://hub.gitmirror.com/https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-geolocation-cn.srs",
+        "download_detour": "🎯 Direct"
       },
       {
         "tag": "geoip-cn",
         "type": "remote",
         "format": "binary",
-        "url": "https://raw.githubusercontent.com/SagerNet/sing-geoip/rule-set/geoip-cn.srs",
-        "download_detour": "🚀 Proxy"
+        "url": "https://hub.gitmirror.com/https://raw.githubusercontent.com/SagerNet/sing-geoip/rule-set/geoip-cn.srs",
+        "download_detour": "🎯 Direct"
       },
       {
         "tag": "geosite-cn",
         "type": "remote",
         "format": "binary",
-        "url": "https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-cn.srs",
-        "download_detour": "🚀 Proxy"
+        "url": "https://hub.gitmirror.com/https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-cn.srs",
+        "download_detour": "🎯 Direct"
       },
       {
         "tag": "geosite-telegram",
         "type": "remote",
         "format": "binary",
-        "url": "https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-telegram.srs",
-        "download_detour": "🚀 Proxy"
+        "url": "https://hub.gitmirror.com/https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-telegram.srs",
+        "download_detour": "🎯 Direct"
       },
       {
         "tag": "geosite-geolocation-!cn",
         "type": "remote",
         "format": "binary",
-        "url": "https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-geolocation-!cn.srs",
-        "download_detour": "🚀 Proxy"
+        "url": "https://hub.gitmirror.com/https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-geolocation-!cn.srs",
+        "download_detour": "🎯 Direct"
       }
     ],
     "rules": [
