--- a/config-1.11.json
+++ b/config-1.11.json
@@ -32,7 +32,7 @@
       },
       {
         "outbound": "any",
-        "server": "local"
+        "server": "dns_remote"
       },
       {
         "rule_set": [
