--- a/config-1.11.json
+++ b/config-1.11.json
@@ -17,6 +17,11 @@
         "strategy": "prefer_ipv4"
       },
       {
+        "tag": "bootstrap_dns",
+        "address": "1.1.1.1", // Cloudflare DNS，未被墙
+        "strategy": "prefer_ipv4"
+      },
+      {
         "tag": "local",
         "address": "local"
       }
@@ -32,7 +37,7 @@
       },
       {
         "outbound": "any",
-        "server": "local"
+        "server": "bootstrap_dns"
       },
       {
         "rule_set": [
