--- a/config-1.11.json
+++ b/config-1.11.json
@@ -32,7 +32,7 @@
       },
       {
         "outbound": "any",
-        "server": "dns_direct",
+        "server": "local",
         "disable_cache": true
       },
       {
