--- a/config-1.11.json
+++ b/config-1.11.json
@@ -7,7 +7,7 @@
     "servers": [
       {
         "tag": "dns_remote",
-        "address": "https://1.1.1.1/dns-query",
+        "address": "https://dns.google/dns-query",
         "address_resolver": "dns_resolver",
         "strategy": "ipv4_only",
         "detour": "🚀 Proxy"
